--- a/dns/_variables.scss
+++ b/dns/_variables.scss
@@ -4,3 +4,21 @@ $secondary: #436073;
 $success: #2ea690;
 $warning: #839C7d;
 $info: #F2f0d8;
+
+// Spacing
+$padding: 15px;
+$margin: 30px;
+
+// Borders
+$border: 3px;
+$border-radius: 10px;
+
+// Box Shadow
+$box-shadow: 0 0 10px #333333;
+
+// Font Sizes
+$fs: 1rem;
+$fs-sm: $fs * 0.667;
+$fs-lg: $fs * 1.5;
+$fs-xl: $fs * 2.25;
+$fs-xxl: $fs * 3.375;
