--- a/css/index.css
+++ b/css/index.css
@@ -53,3 +53,143 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+
+.p-0 {
+  padding: 0;
+}
+
+.p-1 {
+  padding: 15px;
+}
+
+.p-2 {
+  padding: 30px;
+}
+
+.pl-0 {
+  padding-left: 0;
+}
+
+.pl-1 {
+  padding-left: 15px;
+}
+
+.pl-2 {
+  padding-left: 30px;
+}
+
+.pr-0 {
+  padding-right: 0;
+}
+
+.pr-1 {
+  padding-right: 15px;
+}
+
+.pr-2 {
+  padding-right: 30px;
+}
+
+.pt-0 {
+  padding-top: 0;
+}
+
+.pt-1 {
+  padding-top: 15px;
+}
+
+.pt-2 {
+  padding-top: 30px;
+}
+
+.pb-0 {
+  padding-bottom: 0;
+}
+
+.pb-1 {
+  padding-bottom: 15px;
+}
+
+.pb-2 {
+  padding-bottom: 30px;
+}
+
+.m-0 {
+  margin: 0;
+}
+
+.m-1 {
+  margin: 30px;
+}
+
+.m-2 {
+  margin: 60px;
+}
+
+.ml-0 {
+  margin-left: 0;
+}
+
+.ml-1 {
+  margin-left: 30px;
+}
+
+.ml-2 {
+  margin-left: 60px;
+}
+
+.mr-0 {
+  margin-right: 0;
+}
+
+.mr-1 {
+  margin-right: 30px;
+}
+
+.mr-2 {
+  margin-right: 60px;
+}
+
+.mt-0 {
+  margin-top: 0;
+}
+
+.mt-1 {
+  margin-top: 30px;
+}
+
+.mt-2 {
+  margin-top: 60px;
+}
+
+.mb-0 {
+  margin-bottom: 0;
+}
+
+.mb-1 {
+  margin-bottom: 30px;
+}
+
+.mb-2 {
+  margin-bottom: 60px;
+}
+
+.fs-sm {
+  font-size: 0.667rem;
+}
+
+.fs-md {
+  font-size: 1rem;
+}
+
+.fs-lg {
+  font-size: 1.5rem;
+}
+
+.fs-xl {
+  font-size: 2.25rem;
+}
+
+.fs-xxl {
+  font-size: 3.375rem;
+}
