--- a/css/index.css
+++ b/css/index.css
@@ -1,57 +1,27 @@
 @import url("https://fonts.googleapis.com/css2?family=Geologica:wght@400;700&display=swap");
-/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
-*/
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
+/* reset styles */
+* {
+  color: inherit;
   margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline;
-}
-
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
-  display: block;
-}
-
-body {
   font-family: Geologica;
-  line-height: 1;
 }
 
-ol, ul {
-  list-style: none;
+ul {
+  padding: 0;
+  list-style-type: none;
 }
 
-blockquote, q {
-  quotes: none;
+a {
+  text-decoration: none;
 }
 
-blockquote:before, blockquote:after,
-q:before, q:after {
-  content: "";
-  content: none;
+hr {
+  border: 0;
+  border-top: 1px dotted #efefef;
 }
 
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
+img {
+  max-width: 100%;
 }
 
 .button-primary-button {
