font-weight variables

--- a/dns/_variables.scss
+++ b/dns/_variables.scss
@@ -22,3 +22,8 @@ $fs-sm: $fs * 0.667;
 $fs-lg: $fs * 1.5;
 $fs-xl: $fs * 2.25;
 $fs-xxl: $fs * 3.375;
+
+// Font Weights
+$fw: 400;
+$fw-light: 200;
+$fw-bold: 700;
