--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Geologica:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Geologica:wght@200;400;700&display=swap");
 /* reset styles */
 * {
   color: inherit;
