--- a/dns/_base.scss
+++ b/dns/_base.scss
@@ -1,5 +1,5 @@
 // Font Import 
-@import url('https://fonts.googleapis.com/css2?family=Geologica:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Geologica:wght@200;400;700&display=swap');
 
 // Reset
 /* reset styles */
