--- a/css/index.css
+++ b/css/index.css
@@ -6,6 +6,10 @@
   font-family: Geologica;
 }
 
+ul {
+  padding: 0;
+  list-style-type: none;
+}
 
 a {
   text-decoration: none;
@@ -192,8 +196,10 @@ img {
 
 .ul {
   list-style-type: disc;
+  padding: 0;
 }
 
 .ol {
   list-style-type: upper-roman;
+  padding: 0;
 }
