--- a/dns/_variables.scss
+++ b/dns/_variables.scss
@@ -5,6 +5,15 @@ $success: #2ea690;
 $warning: #839C7d;
 $info: #F2f0d8;
 
+// Colours
+$colors: (
+    "primary": $primary,
+    "secondary": $secondary,
+    "success": $success,
+    "warning": $warning,
+    "info": $info
+);
+
 // Spacing
 $padding: 15px;
 $margin: 30px;
