--- a/dns/components/_buttons.scss
+++ b/dns/components/_buttons.scss
@@ -1,9 +1,11 @@
+// ------------------------- Create a @mixin for each style -------------------------
 @mixin primary-button($bg-color:#073a59) {
-      text-decoration: none;
       color: white;
       display: inline-block;
+      font-weight: bold;
       border: none; 
       padding: $padding;
+      margin: $margin;
       border-radius: 6px;
       background-color: $bg-color;
 
@@ -11,9 +13,84 @@
             background-color: #092536;
           }
     }
-    
-    .button-primary-button {
+
+@mixin secondary-button($bg-color:#436073) {
+      color: black;
+      display: inline-block;
+      font-weight: bold;
+      border: none; 
+      padding: $padding;
+      margin: $margin;
+      border-radius: 6px;
+      background-color: $bg-color;
+
+      &:hover {
+            background-color: #334958;
+            color: white;
+          }
+}
+
+@mixin success-button($bg-color:#2ea690) {
+      color: black;
+      display: inline-block;
+      font-weight: bold;
+      border: none; 
+      padding: $padding;
+      margin: $margin;
+      border-radius: 6px;
+      background-color: $bg-color;
+
+      &:hover {
+            background-color: #268c79;
+            color: white;
+          }
+}
+
+@mixin warning-button($bg-color:#839C7d) {
+      color: black;
+      display: inline-block;
+      font-weight: bold;
+      border: none; 
+      padding: $padding;
+      margin: $margin;
+      border-radius: 6px;
+      background-color: $bg-color;
+
+      &:hover {
+            background-color: #6f856a;
+            color: white;
+          }
+}
+
+@mixin info-button($bg-color:#F2f0d8) {
+      color: black;
+      display: inline-block;
+      font-weight: bold;
+      border: 1px rgb(200, 184, 146) solid; 
+      padding: $padding;
+      margin: $margin;
+      border-radius: 6px;
+      background-color: $bg-color;
+
+      &:hover {
+            background-color: #cdcbb6;
+          }
+}
+
+
+// -------------------------  Apply the @mixin to each button -------------------------
+ .button-primary-button {
       @include primary-button;
   }
-
-  
+  .button-secondary-button {
+      @include secondary-button;
+  }
+.button-success-button {
+      @include success-button;
+}
+.button-warning-button {
+      @include warning-button;
+}
+.button-info-button {
+      @include info-button;
+}
