--- a/dns/index.scss
+++ b/dns/index.scss
@@ -15,7 +15,7 @@
 
 // components (button, card, navbar)
 
-// utilities (margin, padding, opacity)
+// utilities (margin, padding, opacity, alignment)
 @import 'utilities';
 @import 'layout';
 
