--- a/dns/_layout.scss
+++ b/dns/_layout.scss
@@ -3,3 +3,10 @@
     max-width: 72em;
     margin-inline: Auto;
 }
+
+
+// Alignment 
+.justify-center {
+    display: flex; 
+    justify-content: center;
+}
