working on link

--- a/dns/index.scss
+++ b/dns/index.scss
@@ -10,8 +10,9 @@
 // buttons
 @import 'components/buttons';
 
-// list
+// list & links
 @import 'components/lists';
+@import 'components/links';
 
 // components (button, card, navbar)
 
