--- a/dns/_utilities.scss
+++ b/dns/_utilities.scss
@@ -105,7 +105,7 @@ $utilities: (
           "default": $border-radius,
           "none": 0,
           "xs": math.div($border-radius, 4),
-          "sm": math.div($radius, 2),
+          "sm": math.div($border-radius, 2),
           "lg": $border-radius * 2,
           "full": 50%,
         )
