--- a/dns/components/_buttons.scss
+++ b/dns/components/_buttons.scss
@@ -1,4 +1,6 @@
 // ------------------------- Create a @mixin for each style -------------------------
+
+// PRIMARY BUTTON 
 @mixin primary-button($bg-color:#073a59) {
       color: white;
       display: inline-block;
@@ -14,6 +16,7 @@
           }
     }
 
+    // SECONDARY BUTTON
 @mixin secondary-button($bg-color:#436073) {
       color: black;
       display: inline-block;
@@ -30,6 +33,7 @@
           }
 }
 
+// SUCCESS BUTTON
 @mixin success-button($bg-color:#2ea690) {
       color: black;
       display: inline-block;
@@ -46,6 +50,7 @@
           }
 }
 
+// WARNING BUTTON
 @mixin warning-button($bg-color:#839C7d) {
       color: black;
       display: inline-block;
@@ -62,6 +67,8 @@
           }
 }
 
+
+// INFO BUTTON
 @mixin info-button($bg-color:#F2f0d8) {
       color: black;
       display: inline-block;
