--- a/css/index.css
+++ b/css/index.css
@@ -32,12 +32,20 @@ img {
   background-color: #073a59;
 }
 
+.br-primary {
+  border: 3px solid #073a59;
+}
+
 .text-secondary {
   color: #436073;
 }
 
 .bg-secondary {
   background-color: #436073;
+}
+
+.br-secondary {
+  border: 3px solid #436073;
 }
 
 .text-success {
@@ -48,12 +56,20 @@ img {
   background-color: #2ea690;
 }
 
+.br-success {
+  border: 3px solid #2ea690;
+}
+
 .text-warning {
   color: #839C7d;
 }
 
 .bg-warning {
   background-color: #839C7d;
+}
+
+.br-warning {
+  border: 3px solid #839C7d;
 }
 
 .text-info {
@@ -64,6 +80,10 @@ img {
   background-color: #F2f0d8;
 }
 
+.br-info {
+  border: 3px solid #F2f0d8;
+}
+
 .text-white {
   color: #f2f2f2;
 }
@@ -72,12 +92,20 @@ img {
   background-color: #f2f2f2;
 }
 
+.br-white {
+  border: 3px solid #f2f2f2;
+}
+
 .text-black {
   color: #333333;
 }
 
 .bg-black {
   background-color: #333333;
+}
+
+.br-black {
+  border: 3px solid #333333;
 }
 
 .button-primary-button {
