--- a/dns/components/_links.scss
+++ b/dns/components/_links.scss
@@ -1,11 +1,11 @@
 .link{
-    color: $primary;
+    color: $secondary;
 
-    //   &:active{
-    //     color: aquamarine;
-    //   }
-    //   &:hover{
-    //     color: aquamarine;
-    //   }
+      &:active{
+        color: $success;
+      }
+      &:hover{
+        color: $warning;
+      }
 
 }
