--- a/css/index.css
+++ b/css/index.css
@@ -192,7 +192,13 @@ ol {
 }
 
 .link {
-  color: #073a59;
+  color: #f9f99a;
+}
+.link:active {
+  color: #2ea690;
+}
+.link:hover {
+  color: #839C7d;
 }
 
 .p-0 {
