Added form file

--- a/dns/index.scss
+++ b/dns/index.scss
@@ -13,6 +13,7 @@
 // list & links
 @import 'components/lists';
 @import 'components/links';
+@import 'components/forms';
 
 // components (button, card, navbar)
 
