--- a/css/index.css
+++ b/css/index.css
@@ -253,6 +253,17 @@ ol {
   color: #839C7d;
 }
 
+input[type=text] {
+  width: 10rem;
+  padding: 12px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
+}
+input[type=text]:focus {
+  background-color: #436073;
+  color: #f2f2f2;
+}
+
 .p-0 {
   padding: 0;
 }
