change border color to bc

--- a/dns/_colors.scss
+++ b/dns/_colors.scss
@@ -5,7 +5,7 @@
     .bg-#{$key} {
         background-color: $val;
     }
-    .br-#{$key} {
+    .bc-#{$key} {
         border: $border solid $val;
     }
 }
