added style to table.

--- a/dns/components/_forms.scss
+++ b/dns/components/_forms.scss
@@ -9,3 +9,11 @@ input[type=text] {
         color: $white;
       }
 }
+
+tr {
+
+    &:nth-child(even){
+        background-color: $secondary;
+        color: $white;
+    }
+}
