--- a/dns/components/_forms.scss
+++ b/dns/components/_forms.scss
@@ -1,3 +1,5 @@
+// text input
+
 input[type=text] {
     width: 14rem;
     padding: 12px 20px;
@@ -10,6 +12,7 @@ input[type=text] {
       }
 }
 
+// table
 tr {
 
     &:nth-child(even){
