adding heading classes

--- a/dns/_utilities.scss
+++ b/dns/_utilities.scss
@@ -89,7 +89,17 @@ $utilities: (
           "lg": $fs-lg,
           "xl": $fs-xl,
           "xxl": $fs-xxl
-        )
+        ),
+      ),
+      "font-size": (
+        "prefix": "h",
+        "values": (
+          "1": $h1,
+          "2": $h2,
+          "3": $h3,
+          "4": $h4,
+          "5": $h5,
+        ),
       ),
       "font-weight": (
         "prefix": "fw",
