--- a/css/index.css
+++ b/css/index.css
@@ -264,6 +264,11 @@ input[type=text]:focus {
   color: #f2f2f2;
 }
 
+tr:nth-child(even) {
+  background-color: #436073;
+  color: #f2f2f2;
+}
+
 .p-0 {
   padding: 0;
 }
