--- a/dns/_base.scss
+++ b/dns/_base.scss
@@ -18,11 +18,23 @@
     text-decoration: none;
   }
   
-  hr {
-    border: 0;
-    border-top: 1px dotted #efefef;
-  }
-  
   img {
     max-width: 100%;
   }
+
+/* Our Styles */
+.h1 {
+	font-size: 5rem;
+}
+.h2 {
+	font-size: 4rem;
+}
+.h3 {
+	font-size: 3rem;
+}
+.h4 {
+	font-size: 2rem;
+}
+.h5 {
+	font-size: 1rem;
+}
