--- a/css/index.css
+++ b/css/index.css
@@ -22,22 +22,27 @@ img {
 /* Our Styles */
 .h1 {
   font-size: 5rem;
+  font-weight: 400;
 }
 
 .h2 {
   font-size: 4rem;
+  font-weight: 400;
 }
 
 .h3 {
   font-size: 3rem;
+  font-weight: 400;
 }
 
 .h4 {
   font-size: 2rem;
+  font-weight: 400;
 }
 
 .h5 {
   font-size: 1rem;
+  font-weight: 400;
 }
 
 .text-primary {
@@ -280,9 +285,18 @@ input[type=text]:focus {
   color: #f2f2f2;
 }
 
+tr {
+  border: 1px solid #333;
+  padding: 8px;
+}
 tr:nth-child(even) {
   background-color: #436073;
   color: #f2f2f2;
+}
+
+td {
+  border: 1px solid #333;
+  padding: 8px;
 }
 
 .p-0 {
