added background div to colors

--- a/dns/_variables.scss
+++ b/dns/_variables.scss
@@ -7,7 +7,7 @@ $warning: #839C7d;
 $info: #f9f99a;
 $white: #f2f2f2;
 $black: #333333;
-$peach: bisque; 
+$peach: rgb(252, 241, 228); 
 
 // Colours
 $colors: (
