--- a/css/index.css
+++ b/css/index.css
@@ -124,6 +124,18 @@ img {
   border: 5px solid #333333;
 }
 
+.text-peach {
+  color: rgb(252, 241, 228);
+}
+
+.bg-peach {
+  background-color: rgb(252, 241, 228);
+}
+
+.bc-peach {
+  border: 5px solid rgb(252, 241, 228);
+}
+
 .button {
   display: inline-block;
   font-weight: bold;
@@ -249,6 +261,22 @@ img {
   background-color: #1a1a1a;
 }
 
+.button-peach {
+  display: inline-block;
+  font-weight: bold;
+  border: none;
+  padding: 15px;
+  margin: 30px;
+  border-radius: 6px;
+  background-color: rgb(252, 241, 228);
+}
+.button-peach:hover {
+  background-color: #092536;
+}
+.button-peach:hover {
+  background-color: #f7d9b6;
+}
+
 ul {
   list-style-type: disc;
   padding: 0;
@@ -280,9 +308,18 @@ input[type=text]:focus {
   color: #f2f2f2;
 }
 
+tr {
+  border: 1px solid #333;
+  padding: 8px;
+}
 tr:nth-child(even) {
   background-color: #436073;
   color: #f2f2f2;
+}
+
+td {
+  border: 1px solid #333;
+  padding: 8px;
 }
 
 .p-0 {
