--- a/css/index.css
+++ b/css/index.css
@@ -129,6 +129,18 @@ img {
   border: 5px solid #333333;
 }
 
+.text-peach {
+  color: bisque;
+}
+
+.bg-peach {
+  background-color: bisque;
+}
+
+.bc-peach {
+  border: 5px solid bisque;
+}
+
 .button {
   display: inline-block;
   font-weight: bold;
@@ -252,6 +264,22 @@ img {
 }
 .button-black:hover {
   background-color: #1a1a1a;
+}
+
+.button-peach {
+  display: inline-block;
+  font-weight: bold;
+  border: none;
+  padding: 15px;
+  margin: 30px;
+  border-radius: 6px;
+  background-color: bisque;
+}
+.button-peach:hover {
+  background-color: #092536;
+}
+.button-peach:hover {
+  background-color: #ffcd91;
 }
 
 ul {
