--- a/dns/_base.scss
+++ b/dns/_base.scss
@@ -22,24 +22,7 @@
     max-width: 100%;
   }
 
-/* Our Styles */
-.h1 {
-	font-size: 5rem;
-	font-weight: 400;
-}
-.h2 {
-	font-size: 4rem;
-	font-weight: 400;
-}
-.h3 {
-	font-size: 3rem;
-	font-weight: 400;
-}
-.h4 {
-	font-size: 2rem;
-	font-weight: 400;
-}
-.h5 {
+h1, h2, h3, h4, h5, h6 {
 	font-size: 1rem;
 	font-weight: 400;
 }
