--- a/dns/components/_forms.scss
+++ b/dns/components/_forms.scss
@@ -29,3 +29,9 @@ td {
     border: 1px solid #333;
     padding: 8px;
 }
+
+th {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    text-align: left;
+}
