--- a/dns/_utilities.scss
+++ b/dns/_utilities.scss
@@ -88,7 +88,8 @@ $utilities: (
           "md": $fs,
           "lg": $fs-lg,
           "xl": $fs-xl,
-          "xxl": $fs-xxl
+          "xxl": $fs-xxl,
+          "xxxl": $fs-xxxl,
         ),
       ),
       "font-weight": (
