--- a/dns/_variables.scss
+++ b/dns/_variables.scss
@@ -38,6 +38,7 @@ $fs-sm: $fs * 0.667;
 $fs-lg: $fs * 1.5;
 $fs-xl: $fs * 2.25;
 $fs-xxl: $fs * 3.375;
+$fs-xxxl: $fs * 4.225;
 
 // Font Weights
 $fw: 400;
