--- a/dns/components/_forms.scss
+++ b/dns/components/_forms.scss
@@ -24,14 +24,13 @@ tr {
     }
 }
 
-td {
-    border: 1px solid #333;
+td, th {
+    border: 2px solid #333;
     padding: 8px;
 }
 
 th {
-    border: 1px solid #333;
-    padding: 8px;
+
     padding-top: 12px;
     padding-bottom: 12px;
     text-align: left;
