--- a/css/index.css
+++ b/css/index.css
@@ -292,6 +292,10 @@ input[type=text]:focus {
   color: #f2f2f2;
 }
 
+table {
+  border-collapse: collapse;
+}
+
 tr:nth-child(even) {
   background-color: #436073;
   color: #f2f2f2;
