--- a/css/index.css
+++ b/css/index.css
@@ -294,6 +294,7 @@ input[type=text]:focus {
 
 table {
   border-collapse: collapse;
+  margin: 10px;
 }
 
 tr:nth-child(even) {
@@ -512,5 +513,9 @@ th {
 
 .flex {
   display: flex;
-  max-width: 200px;
+}
+
+.flex-stack {
+  display: flex;
+  flex-wrap: wrap;
 }
