--- a/dns/components/_forms.scss
+++ b/dns/components/_forms.scss
@@ -12,6 +12,10 @@ input[type=text] {
       }
 }
 
+form{
+    margin: 10px;
+}
+
 // table
 table{
     border-collapse: collapse;
@@ -41,3 +45,4 @@ th {
     padding-bottom: 12px;
     text-align: left;
 }
+
