added colours and subheading and changed peach

--- a/dns/_variables.scss
+++ b/dns/_variables.scss
@@ -7,7 +7,7 @@ $warning: #839C7d;
 $info: #f9f99a;
 $white: #f2f2f2;
 $black: #333333;
-$peach: rgb(243, 237, 230); 
+$peach: #F3EDE6; 
 
 // Colours
 $colors: (
